--- a/newActivity.tex
+++ b/newActivity.tex
@@ -1,7 +1,7 @@
 \documentclass{ximera}
 
 \title{A new Ximera Activity}
-\author{YOUR-NAME-HERE}
+\author{Kelly Stady}
 
 \begin{document}
 \begin{abstract}
