--- a/newActivity.tex
+++ b/newActivity.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 \begin{abstract}
-    A default abstract of an almost empty course.
+    Calculus I.
 \end{abstract}
 \maketitle
 
