--- a/newCourse.tex
+++ b/newCourse.tex
@@ -1,7 +1,7 @@
 \documentclass{xourse}
 
 \title{A new Ximera Course}
-\author{YOUR-NAME-HERE}
+\author{Kelly Stady}
 
 \begin{document}
 \begin{abstract}
